pathfinder/tests/BugDay_2005-11-09_0.9.3/Tests/xquery_crashtest.SF-1207048.stable.err
stderr of test 'xquery_crashtest.SF-1207048` in directory 'tests/BugDay_2005-11-09_0.9.3` itself:


# 14:58:42 >  
# 14:58:42 >  Mtimeout -timeout 180 Mserver "--config=/ufs/zhang/scratch/monet-stable/program/etc/MonetDB.conf" --debug=10 --set "monet_mod_path=/ufs/zhang/scratch/monet-stable/program/lib/MonetDB" --set "gdk_dbfarm=/ufs/zhang/scratch/monet-stable/program/var/MonetDB/dbfarm" --set "sql_logdir=/ufs/zhang/scratch/monet-stable/program/var/MonetDB/log" --set mapi_port=32401 --set sql_port=44187 --set xquery_port=57716 --set monet_prompt= --trace "--dbname=mTests_tests_BugDay_2005-11-09_0.9.3" --dbinit="module(pathfinder); pfstart();" ; echo ; echo Over..
# 14:58:42 >  


# 14:58:44 >  
# 14:58:44 >  Mtimeout -timeout 60 MapiClient -lxquery -sxml -u monetdb -P monetdb --host=localhost --port=57716 xquery_crashtest.SF-1207048.xq
# 14:58:44 >  

MAPI  = monetdb@localhost:39248
QUERY = string(string(string(string(string(string(string(string(string(string( string(string(string(string(string(string(string(string(string(string(
ERROR = !fatal error: aborted too deep recursion
        !# halted in /ufs/manegold/_/scratch0/Monet/Testing/Current/source/pathfinder/compiler/semantics/normalize.brg (reduce), line 711

# 11:14:48 >  
# 11:14:48 >  Done.
# 11:14:48 >  

